[package]
name = "shielded-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
midnight-circuits = { git = "https://github.com/midnightntwrk/midnight-zk" }
midnight-aggregator = { git = "https://github.com/midnightntwrk/midnight-zk" }
midnight-curves = { git = "https://github.com/midnightntwrk/midnight-zk" }
midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk" }
sha2 = "0.10.9"
rand = "0.8"
rand_chacha = "0.3"
ff = "0.13.1"
group = "0.13.0"
rand_core = "0.9.3"
num-bigint = "0.4.6"
